<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <RelativeLayout
        android:id="@+id/myContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_flag"
            android:layout_width="@dimen/img_country_w"
            android:layout_height="@dimen/img_country_w"
            android:transitionName="@string/trans_country" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_country_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:transitionName="@string/trans_country_txt" />

        <TextView
            android:id="@+id/txt_country_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_country_capital"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</LinearLayout>